# rtopy

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-publish.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: example_e1071.py  example_getting-started.py  example_rbridge.py  getting-started.py  new_version.py
rtopy/: __init__.py  bridge.py  cli.py  exceptions.py  rtopy.py  utils.py
rtopy-docs/: index.html  rtopy.html  search.js
rtopy-docs/rtopy/: __pycache__.html  bridge.html  cli.html  demo.html  exceptions.html  rtopy.html  utils.html
rtopy/demo/: thierrymoudiki_20240304_rtopyintro.ipynb
tests/: __init__.py  test_rtopy.py
