[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtopy"
version = "0.2.0"
description = "Lightweight bridge for calling R functions from Python"
readme = "README.md"
requires-python = ">=3.7"
license = "BSD-3-Clause"
authors = [
    {name = "T. Moudiki", email = "thierry.moudiki@gmail.com"}
]
keywords = ["r", "python", "bridge", "statistics", "data-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
full = ["numpy>=1.19.0", "pandas>=1.1.0"]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.8",
]

[project.urls]
Homepage = "https://github.com/Techtonique/rtopy"
Repository = "https://github.com/Techtonique/rtopy"
Issues = "https://github.com/Techtonique/rtopy/issues"